[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/item/list_item.gd" type="Script" id=1]
[ext_resource path="res://scenes/item/item_text.gd" type="Script" id=2]
[ext_resource path="res://custome_themes/text_edit_theme.tres" type="Theme" id=3]
[ext_resource path="res://custome_themes/label_theme.tres" type="Theme" id=4]
[ext_resource path="res://icons/check-fill.svg" type="Texture" id=5]
[ext_resource path="res://icons/close-fill.svg" type="Texture" id=6]
[ext_resource path="res://scenes/main/text_edit.gd" type="Script" id=7]

[node name="ListItem" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -486.0
margin_bottom = -576.0
rect_min_size = Vector2( 0, 24 )
color = Color( 0.168627, 0.192157, 0.25098, 1 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )

[node name="CheckBox" type="CheckBox" parent="HBoxContainer"]
margin_right = 24.0
margin_bottom = 24.0

[node name="Text" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 28.0
margin_right = 40.0
margin_bottom = 24.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="Label" type="Label" parent="HBoxContainer/Text"]
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
theme = ExtResource( 4 )
valign = 1

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/Text"]
visible = false
margin_left = 4.0
margin_right = 4.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
mouse_filter = 1
size_flags_horizontal = 3
theme = ExtResource( 3 )
wrap_enabled = true
caret_blink = true
script = ExtResource( 7 )
disabled = true

[node name="ButtonsContainer" type="CenterContainer" parent="HBoxContainer/Text"]
visible = false
margin_left = 4.0
margin_right = 60.0
margin_bottom = 24.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Text/ButtonsContainer"]
margin_top = 2.0
margin_right = 56.0
margin_bottom = 22.0

[node name="ConfirmButton" type="Button" parent="HBoxContainer/Text/ButtonsContainer/HBoxContainer"]
margin_right = 28.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 5 )

[node name="CancelButton" type="Button" parent="HBoxContainer/Text/ButtonsContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 56.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource( 6 )

[connection signal="mouse_entered" from="." to="." method="_on_ListItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ListItem_mouse_exited"]
[connection signal="resized" from="." to="." method="_on_ListItem_resized"]
[connection signal="fitted_to_text" from="HBoxContainer/Text" to="." method="_on_Text_fitted_to_text"]
[connection signal="resized" from="HBoxContainer/Text/Label" to="." method="_on_Label_resized"]
[connection signal="enter_key_pressed" from="HBoxContainer/Text/TextEdit" to="." method="complete_edit"]
[connection signal="text_changed" from="HBoxContainer/Text/TextEdit" to="HBoxContainer/Text" method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="HBoxContainer/Text/ButtonsContainer/HBoxContainer/ConfirmButton" to="." method="complete_edit"]
[connection signal="pressed" from="HBoxContainer/Text/ButtonsContainer/HBoxContainer/CancelButton" to="." method="cancel_edit"]
